<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/my_dialog_income_bg"
    android:orientation="vertical"
    app:divider="@drawable/my_center_line"
    app:dividerPadding="10dp"
    app:showDividers="middle">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="8dp"
        android:text="@string/my_order_income_title"
        android:textColor="@color/text"
        android:textSize="@dimen/base_font_size_16"

        />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_order_income_recycleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_income_order_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_order_username"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_income_order_username_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/app_name"
            app:layout_constraintLeft_toRightOf="@+id/tv_income_order_username"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_income_payment_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/my_order_time"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_income_order_username" />

        <TextView
            android:id="@+id/tv_income_payment_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:text="2020/01/00 00"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_income_payment_time"
            app:layout_constraintLeft_toRightOf="@+id/tv_income_payment_time" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/llLevelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnCloseDialog"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/my_dialog_btn_comfig_bg"
        android:text="@string/my_tv_close_btn"
        android:textColor="@color/white"
        android:textSize="@dimen/base_font_size_15" />

</android.support.v7.widget.LinearLayoutCompat>