<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_10"
    android:background="@drawable/my_register_item_bg"
    android:padding="@dimen/dp_10">

    <TextView
        android:id="@+id/tv_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_register_username"
        android:textColor="@color/text"
        android:textSize="@dimen/base_font_size_13"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_userName_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text=""
        android:textColor="@color/text"
        android:textSize="@dimen/base_font_size_13"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/tv_userName"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_forword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:src="@mipmap/icon_right"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_userName_value" />


    <TextView
        android:id="@+id/tv_TelNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/my_register_tel_no"
        android:textColor="@color/text_sub_dark"
        android:textSize="@dimen/base_font_size_13"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_userName" />

    <TextView
        android:id="@+id/tv_TelNo_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="10086"
        android:textColor="@color/text_sub_dark"
        android:textSize="@dimen/base_font_size_13"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_TelNo"
        app:layout_constraintLeft_toRightOf="@+id/barrier" />

    <TextView
        android:id="@+id/tv_register_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/my_register_time"
        android:textColor="@color/text_sub_dark"
        android:textSize="@dimen/base_font_size_13"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_TelNo" />

    <TextView
        android:id="@+id/tv_register_date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="10086"
        android:textColor="@color/text_sub_dark"
        android:textSize="@dimen/base_font_size_13"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_register_date"
        app:layout_constraintLeft_toRightOf="@+id/barrier" />

    <TextView
        android:id="@+id/tv_register_addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/my_register_by"
        android:textColor="@color/text_sub_dark"
        android:textSize="@dimen/base_font_size_13"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_date" />



    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="tv_register_date" />

    <TextView
        android:id="@+id/tv_register_addr_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="10086"
        android:textColor="@color/text_sub_dark"
        android:textSize="@dimen/base_font_size_13"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_register_addr"
        app:layout_constraintLeft_toRightOf="@+id/barrier" />

    <TextView
        android:id="@+id/tv_register_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/my_register_user_type"
        android:textColor="@color/text_sub_dark"
        android:textSize="@dimen/base_font_size_13"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_addr" />

    <TextView
        android:id="@+id/tv_register_type_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="10086"
        android:textColor="@color/text_sub_dark"
        android:textSize="@dimen/base_font_size_13"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_register_type"
        app:layout_constraintLeft_toRightOf="@+id/barrier" />
</android.support.constraint.ConstraintLayout>