<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="edViewModel"
            type="cc.onion.cosyfans.my.viewdModel.EditMerchantViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@color/white"
        tools:context="cc.onion.cosyfans.my.activity.merchants.EditMerchantActivity">


        <LinearLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                style="@style/my_ed_textviewStyle"
                android:text="@string/my_store_name" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/my_editext_bg_color"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                >
                <EditText
                    android:id="@+id/my_ed_StoreName"
                    style="@style/my_ed_editTextStyle"
                    android:text="@={edViewModel.name}"
                    android:gravity="center|left"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:layout_above="@+id/my_tv_textNum"
                    />
                <TextView
                    android:id="@+id/my_tv_textNum"
                    style="@style/my_ed_textviewStyle"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:textSize="@dimen/base_font_size_12"
                    android:layout_marginTop="2dp"
                    android:text="0/20" />
            </RelativeLayout>


            <TextView
                style="@style/my_ed_textviewStyle"
                android:text="@string/my_store_introdution" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:background="@color/my_editext_bg_color"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                >
                <EditText
                    android:id="@+id/my_ed_StoreIntrodution"
                    style="@style/my_ed_editTextStyle"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/my_tv_intro_textNum"
                    android:text="@={edViewModel.descIntrodution}"
                    android:lineSpacingExtra="5dp"
                    />
                <TextView
                    android:id="@+id/my_tv_intro_textNum"
                    style="@style/my_ed_textviewStyle"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:textSize="@dimen/base_font_size_12"
                    android:layout_marginTop="2dp"
                    android:text="0/20" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/my_ed_saveBtn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="33dp"
            android:background="@drawable/my_save_btn_bg"
            android:text="@string/my_btn_save_text"
            android:textColor="@color/white"
            android:textSize="@dimen/base_font_size_13" />

    </RelativeLayout>
</layout>
