<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/item_conpon_bg_shape"
    android:orientation="vertical"
    app:divider="@drawable/my_center_line"
    app:showDividers="middle">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        >


        <ImageView
            android:id="@+id/img_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_cancle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_tracking_company_name"
            android:textColor="@color/text"
            android:textSize="@dimen/base_font_size_13"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_cancle" />


        <TextView
            android:id="@+id/tv_company_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/app_name"
            android:textColor="@color/text"
            android:textSize="@dimen/base_font_size_13"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_company_name"
            app:layout_constraintLeft_toRightOf="@+id/tv_company_name" />

        <TextView
            android:id="@+id/tv_tracking_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/my_tracking_order_name"
            android:textColor="@color/text"
            android:textSize="@dimen/base_font_size_13"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_company_name" />

        <TextView
            android:id="@+id/tv_tracking_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/app_name"
            android:textColor="@color/text"
            android:textSize="@dimen/base_font_size_13"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_tracking_name"
            app:layout_constraintLeft_toRightOf="@+id/tv_tracking_name" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:padding="@dimen/dp_10">

        <TextView
            android:id="@+id/tv_tracking_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_tracking_infomation"
            android:textColor="@color/text"
            android:textSize="@dimen/base_font_size_13"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_tracking_recylerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tracking_info" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.LinearLayoutCompat>